--- a/apps/docs/src/pages/docs/getting-started/introduction.mdx
+++ b/apps/docs/src/pages/docs/getting-started/introduction.mdx
@@ -13,6 +13,7 @@ export const getMetadata = () => ({
 		The Ecopages documentation is currently in beta. The API is not stable yet and will have major changes before
 		the first stable release.
 	</p>
+	<p>Check out the example:</p>
 	<code class="p-3 my-2">
 		<span class="select-none">$ </span>bunx degit ecopages/ecopages/examples/starter-jsx my-ecopages
 	</code>
@@ -45,7 +46,7 @@ export const getMetadata = () => ({
 
 Ecopages is a static site generator currently under active development. While it's still evolving, it's stable enough for use in projects.
 
-## What is Ecopages?
+## What is it?
 
 Ecopages is a tool designed to help developers create static websites efficiently. It aims to balance simplicity with the features needed for modern web development, while also considering environmental impact.
 
