--- a/apps/docs/src/pages/docs/core/concepts.mdx
+++ b/apps/docs/src/pages/docs/core/concepts.mdx
@@ -24,11 +24,11 @@ For example, the KitaJS integration might set up template extensions like this:
 
 <CodeBlock>
 ```typescript
-  .setIncludesTemplates({
-    head: 'head.kita.tsx',
-    html: 'html.kita.tsx',
-    seo: 'seo.kita.tsx',
-  })
+.setIncludesTemplates({
+	head: 'head.kita.tsx',
+	html: 'html.kita.tsx',
+	seo: 'seo.kita.tsx',
+})
 ```
 </CodeBlock>
 
@@ -41,8 +41,12 @@ We currently provide a simple Postcss and Tailwind (v3) plugin that provides a p
 You can customize this in your `eco.config.ts` file:
 
 <CodeBlock>
-	```typescript const config = await new ConfigBuilder() // ... other configurations .setProcessors([
-	postcssProcessorPlugin() ]) .build(); ```
+```typescript 
+const config = await new ConfigBuilder() 
+	// ... other configurations
+	.setProcessors([postcssProcessorPlugin()])
+	.build(); 
+```
 </CodeBlock>
 
 ## Script and CSS Loading
@@ -74,24 +78,16 @@ import { BaseLayout } from '@/layouts/base-layout';
 import { type EcoComponent, type GetMetadata, html } from '@ecopages/core';
 
 const HomePage: EcoComponent = () => html`${BaseLayout({
-    class: 'main-content',
-    children: html`
-
-<h1>Ecopages</h1>
-!${RadiantCounter({
-count: 5,
-})}
-`,
-  })}`;
+	class: 'main-content',
+	children: html`<h1>Ecopages</h1>!${RadiantCounter({ count: 5,})}`,
+})}`;
 
 HomePage.config = {
-importMeta: import.meta,
-dependencies: {
-components: [BaseLayout, RadiantCounter],
-},
+	dependencies: {
+		components: [BaseLayout, RadiantCounter],
+	},
 };
-
-````
+```
 </CodeBlock>
 
 ## Robots.txt Generation
@@ -109,8 +105,7 @@ You can add it to your bunfig.toml file:
 <CodeBlock>
 ```toml
 preload = ["@ecopages/bun-postcss-loader", "@ecopages/bun-mdx-kitajs-loader"]
-````
-
+```
 </CodeBlock>
 
 ## Import CSS as String in JS Files
@@ -134,7 +129,6 @@ const MyPage = () => html`${Component()}`;
 ## Project Structure
 
 Ecopages expects a specific project structure:
-
 ```
 
 my-project/
@@ -147,8 +141,7 @@ my-project/
 ├── eco.config.ts
 └── package.json
 
-````
-
+```
 - `src/components/`: Stores reusable components
 - `src/pages/`: Contains your page files (e.g., `.mdx`, `.kita.tsx`, `.lit.tsx`)
 - `src/layouts/`: Holds layout components
@@ -171,27 +164,26 @@ For the best performance during static generation, call your data layer function
 import { getAllBlogPosts, getBlogPost } from '@/data/blog';
 
 export const getStaticPaths: GetStaticPaths = async () => {
-  const posts = getAllBlogPosts();
+	const posts = getAllBlogPosts();
 
-  return {
-    paths: posts.map(post => ({
-      params: { slug: post.slug }
-    }))
-  };
+	return {
+		paths: posts.map(post => ({
+			params: { slug: post.slug }
+		}))
+	};
 };
 
 export const getStaticProps: GetStaticProps = async ({ pathname }) => {
-  const slug = pathname.params.slug as string;
-  const post = getBlogPost(slug);
+	const slug = pathname.params.slug as string;
+	const post = getBlogPost(slug);
 
-  if (!post) {
-    throw new Error(`Post not found: ${slug}`);
-  }
+	if (!post) {
+		throw new Error(`Post not found: ${slug}`);
+	}
 
-  return { props: { post } };
+	return { props: { post } };
 };
-````
-
+```
 </CodeBlock>
 
 ### HTTP Requests to External APIs
@@ -201,14 +193,14 @@ For external data sources, HTTP requests are necessary:
 <CodeBlock>
 ```typescript
 export const getStaticPaths: GetStaticPaths = async () => {
-  const response = await fetch('https://external-api.com/posts');
-  const posts = await response.json();
-  
-  return {
-    paths: posts.map(post => ({
-      params: { slug: post.slug }
-    }))
-  };
+	const response = await fetch('https://external-api.com/posts');
+	const posts = await response.json();
+	
+	return {
+		paths: posts.map(post => ({
+			params: { slug: post.slug }
+		}))
+	};
 };
 ```
 </CodeBlock>
@@ -235,7 +227,7 @@ import appConfig from './eco.config';
 const app = new EcopagesApp({ appConfig });
 
 app.get('/api/hello', async () => {
-return new Response(JSON.stringify({ message: 'Hello world!' }));
+	return new Response(JSON.stringify({ message: 'Hello world!' }));
 });
 
 await app.start();
