--- a/apps/docs/src/pages/docs/core/layouts.mdx
+++ b/apps/docs/src/pages/docs/core/layouts.mdx
@@ -30,17 +30,19 @@ This file defines the overall HTML structure of your pages. Here's an example of
 import { type EcoComponent, html } from '@ecopages/core';
 
 export const Html: EcoComponent<{ children: string }> = ({ children }) => html`
-  <!DOCTYPE html>
-  <html lang="en">
-    !${children}
-  </html>
+	<!DOCTYPE html>
+	<html lang="en">
+		!${children}
+	</html>
 `;
 
 Html.config = {
-importMeta: import.meta,
+	dependencies: {
+		stylesheets: ['./html.css'],
+	},
 };
 
-````
+```
 </CodeBlock>
 
 ### head.ts
@@ -52,19 +54,15 @@ This file defines the content of the `<head>` tag, including meta tags, title, a
 import { type EcoComponent, html } from '@ecopages/core';
 
 export const Head: EcoComponent<{ title: string; description: string }> = ({ title, description }) => html`
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>${title}</title>
-  <meta name="description" content="${description}" />
-  <link rel="icon" href="/favicon.ico" />
-</head>
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>${title}</title>
+		<meta name="description" content="${description}" />
+		<link rel="icon" href="/favicon.ico" />
+	</head>
 `;
-
-Head.config = {
-  importMeta: import.meta,
-};
-````
+```
 
 </CodeBlock>
 
@@ -88,16 +86,18 @@ export type BaseLayoutProps = {
 };
 
 export const BaseLayout: EcoComponent<BaseLayoutProps> = ({ children, class: className }) => html`
-  <body>
-    <main class=${className}>!${children}</main>
-  </body>`;
+	<body>
+		<main class=${className}>!${children}</main>
+	</body>`;
 
 BaseLayout.config = {
-importMeta: import.meta,
-dependencies: { stylesheets: ['./base-layout.css'], scripts: ['./base-layout.script.ts'] },
+	dependencies: {
+		stylesheets: ['./base-layout.css'],
+		scripts: ['./base-layout.script.ts'],
+	},
 };
 
-````
+```
 </CodeBlock>
 
 3. Create associated files for styles (`base-layout.css`) and scripts (`base-layout.script.ts`) if needed.
@@ -110,25 +110,24 @@ import { BaseLayout } from '@/layouts/base-layout';
 import { type EcoComponent, html } from '@ecopages/core';
 
 const HomePage: EcoComponent = () => html`${BaseLayout({
-  class: 'main-content',
-  children: html`
-    <h1>Welcome to Ecopages</h1>
-    <p>This is the homepage of your website.</p>
-  `,
+	class: 'main-content',
+	children: html`
+		<h1>Welcome to Ecopages</h1>
+		<p>This is the homepage of your website.</p>
+	`,
 })}`;
 
 HomePage.config = {
-  importMeta: import.meta,
-  dependencies: {
-    components: [BaseLayout],
-  },
+	dependencies: {
+		components: [BaseLayout],
+	},
 };
 
 export default HomePage;
-````
+```
 
 </CodeBlock>
 
 By using layouts and includes files effectively, you can create a consistent structure for your Ecopages project while keeping your code modular and maintainable.
 
-Remember to always include the `config` object with `importMeta` and any necessary dependencies for both your layouts and pages.
+Remember to always include the `config` object with any necessary dependencies for both your layouts and pages.
