--- a/apps/docs/src/pages/docs/ecosystem/postcss-processor.mdx
+++ b/apps/docs/src/pages/docs/ecosystem/postcss-processor.mdx
@@ -10,59 +10,87 @@ export const getMetadata = () => ({
 
 # PostCSS Processor
 
-The `@ecopages/postcss-processor` package provides a set of utility functions for processing CSS files using PostCSS along with a set of essential plugins like Tailwind CSS, Autoprefixer, and cssnano.
+The `@ecopages/postcss-processor` package provides a PostCSS processor plugin for Ecopages and utility functions for processing CSS files and strings using PostCSS. It comes bundled with essential plugins like Tailwind CSS, Autoprefixer, and cssnano.
 
 ## Installation
 
 Install the package from JSR:
 
-<CodeBlock>```bash bunx jsr add @ecopages/postcss-processor ```</CodeBlock>
+<CodeBlock>
+```bash
+bunx jsr add @ecopages/postcss-processor
+```
+</CodeBlock>
 
 ## Built-in Plugins
 
 The PostCSS processor comes with several built-in plugins:
 
-- `postcss-import`: Transform @import rules by inlining content
-- `@tailwindcss/nesting`: Enable Tailwind CSS nesting features
-- `tailwindcss`: Core Tailwind CSS framework
-- `autoprefixer`: Add vendor prefixes automatically
-- `cssnano`: Optimize and minify CSS
+- `postcss-import`: To transform `@import` rules by inlining content.
+- `tailwindcss/nesting`: To enable Tailwind CSS nesting features.
+- `tailwindcss`: The Tailwind CSS framework.
+- `autoprefixer`: To add vendor prefixes to CSS rules.
+- `cssnano`: For CSS optimization.
 
 ## Configuration
 
-Add the PostCSS processor to your Ecopages configuration:
+Integrate the processor into your Ecopages configuration:
 
 <CodeBlock>
 ```typescript
+// ecopages.config.ts
 import { ConfigBuilder } from '@ecopages/core';
 import { postcssProcessorPlugin } from '@ecopages/postcss-processor';
 
 const config = await new ConfigBuilder()
-.setProcessors([
-postcssProcessorPlugin({
-sourceDir: 'src',
-outputDir: '.eco/__assets__',
-processTailwind: true,
-tailwindInput: 'styles/tailwind.css',
-plugins: {
-// Optionally override default plugins
-},
-inputHeader: '/* Custom header */',
-}),
-])
-.build();
+	.setProcessors([
+		// Add the PostCSS processor plugin
+		postcssProcessorPlugin({
+			// Define a filter for files to process (defaults to /\.css$/)
+			filter: /\.css$/,
+			// Provide a function to transform input before processing
+			transformInput: async (c) => `/* My Custom Header */\n${c}`,
+			// Provide a function to transform output after processing
+			transformOutput: async (css) => css.replace('blue', 'red'),
+			// Explicitly provide plugins (overrides defaults)
+			plugins: {
+				/* custom plugins */
+			},
+		}),
+	])
+	.build();
 
-````
+export default config;
+```
 </CodeBlock>
 
 ### Configuration Options
 
-- `sourceDir`: Directory containing your source CSS files (default: 'src')
-- `outputDir`: Output directory for processed CSS files (default: '.eco/__assets__')
-- `processTailwind`: Enable Tailwind CSS processing (default: true)
-- `tailwindInput`: Path to your main Tailwind CSS file (default: 'styles/tailwind.css')
-- `plugins`: Custom PostCSS plugins configuration
-- `inputHeader`: Optional header to add to processed CSS files
+- `filter`: A Regex filter to match files to process (default: `/\.css$/`).
+- `transformInput`: An optional function to transform the contents of the file before PostCSS processing.
+- `transformOutput`: An optional function to transform the output CSS after PostCSS processing.
+- `plugins`: An optional object containing custom PostCSS plugins to use instead of the default ones.
+
+## PostCSS Config Support
+
+The plugin automatically detects and uses `postcss.config.{js,cjs,mjs,ts}` from your project root if present. This is the recommended way to customize your PostCSS pipeline.
+
+<CodeBlock>
+```javascript
+// postcss.config.js
+module.exports = {
+	plugins: {
+		'postcss-import': {},
+		'tailwindcss/nesting': {},
+		tailwindcss: {},
+		autoprefixer: {},
+		// Add or override plugins here
+		'postcss-simple-vars': {},
+		cssnano: {},
+	},
+};
+```
+</CodeBlock>
 
 ## Using with Bun
 
@@ -71,40 +99,42 @@ To enable CSS imports in your TypeScript/JavaScript files, add the PostCSS loade
 <CodeBlock>
 ```toml
 preload = ["@ecopages/bun-postcss-loader"]
-````
-
+```
 </CodeBlock>
 
 Now you can import CSS files directly in your code:
 
-<CodeBlock>```typescript import styles from './styles.css'; ```</CodeBlock>
+<CodeBlock>
+```typescript
+import styles from './styles.css';
+```
+</CodeBlock>
 
 ## Custom Plugin Usage
 
-You can customize the PostCSS processing pipeline by providing your own plugins:
+You can also use the underlying processor functions directly and providing your own plugins:
 
 <CodeBlock>
 ```typescript
-import { PostCssProcessor } from '@ecopages/postcss-processor';
+import { PostCssProcessor, defaultPlugins } from '@ecopages/postcss-processor';
 import customPlugin from 'postcss-custom-plugin';
 
 const result = await PostCssProcessor.processPath('path/to/file.css', {
-plugins: [
-PostCssProcessor.defaultPlugins['postcss-import'],
-PostCssProcessor.defaultPlugins.tailwindcss,
-PostCssProcessor.defaultPlugins['tailwindcss-nesting'],
-PostCssProcessor.defaultPlugins.autoprefixer,
-customPlugin(),
-PostCssProcessor.defaultPlugins.cssnano,
-],
+	plugins: [
+		defaultPlugins['postcss-import'],
+		defaultPlugins.tailwindcss,
+		defaultPlugins['tailwindcss-nesting'],
+		defaultPlugins.autoprefixer,
+		customPlugin(),
+		defaultPlugins.cssnano,
+	],
 });
-
-````
+```
 </CodeBlock>
 
 ## Processing Methods
 
-The processor provides two main methods for processing CSS:
+The processor provides two main methods for processing CSS standalone:
 
 ### Process File by Path
 
@@ -113,8 +143,7 @@ The processor provides two main methods for processing CSS:
 import { PostCssProcessor } from '@ecopages/postcss-processor';
 
 const css = await PostCssProcessor.processPath('path/to/file.css');
-````
-
+```
 </CodeBlock>
 
 ### Process String or Buffer
@@ -125,7 +154,6 @@ import { PostCssProcessor } from '@ecopages/postcss-processor';
 
 const css = `body { @apply bg-blue-500; }`;
 const processed = await PostCssProcessor.processStringOrBuffer(css, { filePath: 'style.css' });
-
 ```
 </CodeBlock>
 
@@ -133,15 +161,7 @@ const processed = await PostCssProcessor.processStringOrBuffer(css, { filePath: 
 
 The processor includes built-in error handling:
 
-- File not found errors are thrown with clear messages
-- Processing errors are caught and logged
-- On error, processing methods return an empty string instead of failing
-
-## Best Practices
-
-1. Keep your css file tidy and well-structured
-   - Use a consistent naming convention for classes and IDs
-   - Organize styles into separate files for better maintainability
-2. Use PostCSS features like nesting for better CSS organization
-3. Let the processor handle vendor prefixing and optimization
+- File not found errors are thrown with clear messages.
+- Processing errors are caught and logged.
+- On error, processing methods return an empty string instead of failing.
 ```
