--- a/apps/docs/src/pages/docs/integrations/mdx.mdx
+++ b/apps/docs/src/pages/docs/integrations/mdx.mdx
@@ -4,103 +4,141 @@ import { DocsLayout } from '@/layouts/docs-layout';
 export const layout = DocsLayout;
 
 export const getMetadata = () => ({
-	title: 'Docs | MDX Integration',
-	description: 'Learn how to use the MDX integration with Ecopages',
+  title: 'Docs | MDX Integration',
+  description: 'Learn how to use the MDX integration with Ecopages',
 });
 
 # MDX Integration
 
-The `@ecopages/mdx` package enables seamless integration of MDX (Markdown with JSX) into your Ecopages project, allowing you to write content-rich pages with ease.
+The `@ecopages/mdx` package brings the power of [MDX](https://mdxjs.com/) (Markdown with JSX) to Ecopages. It allows you to write content-rich pages using Markdown syntax while seamlessly embedding interactive components.
 
 ## Installation
 
-To install the MDX integration plugin, run the following command in your project directory:
-
-<CodeBlock>```typescript bunx jsr add @ecopages/mdx ```</CodeBlock>
+<CodeBlock>
+```bash
+bunx jsr add @ecopages/mdx
+```
+</CodeBlock>
 
 ## Usage
 
-To incorporate the MDX integration into your Ecopages project, follow these steps:
-
-1. Import the `mdxPlugin` in your Ecopages configuration file:
+To start using MDX, add the `mdxPlugin` to your Ecopages configuration.
 
 <CodeBlock>
 ```typescript
 import { ConfigBuilder } from '@ecopages/core';
 import { mdxPlugin } from '@ecopages/mdx';
-import { kitajsPlugin } from '@ecopages/kitajs';
 
 const config = await new ConfigBuilder()
-.setRootDir(import.meta.dir)
-.setBaseUrl(import.meta.env.ECOPAGES_BASE_URL)
-.setIntegrations([mdxPlugin(), kitajsPlugin()])
-.build();
+	.setRootDir(import.meta.dir)
+	.setBaseUrl(import.meta.env.ECOPAGES_BASE_URL)
+	.setIntegrations([mdxPlugin()])
+	.build();
 
 export default config;
 ```
 </CodeBlock>
 
-## Creating MDX Pages
+### Implicit React Support
 
-Once the MDX integration is set up, you can create pages using MDX syntax. Here's a simple example:
+By default, the MDX plugin is configured to use **React** as the JSX runtime. This means you do not need to manually configure React support or import React in every MDX file. The plugin handles the necessary imports and environment setup for you.
+
+## Features
+
+### Layouts
+
+You can define a wrapper layout for your MDX content by exporting a `layout` component from your MDX file. This is useful for wrapping your content in a consistent page structure.
+
+<CodeBlock>
+```mdx
+import { BaseLayout } from '@/layouts/base-layout';
+
+export const layout = BaseLayout;
+
+# Hello World
+
+This content will be wrapped by the BaseLayout component.
+```
+</CodeBlock>
+
+### Metadata
+
+Page metadata (like title and description) can be defined by exporting a `getMetadata` function, similar to standard TypeScript pages.
+
+<CodeBlock>
+```mdx
+export const getMetadata = () => ({
+  title: 'My MDX Page',
+  description: 'This is a description for the MDX page.'
+});
+
+# Content
+
+Page content goes here...
+```
+</CodeBlock>
+
+### Using Components
+
+You can import and use components directly in your MDX files. Remember to export a `config` object if your components have dependencies that need to be resolved.
 
 <CodeBlock>
 ```mdx
 import { Card } from '@/components/card';
 import { BaseLayout } from '@/layouts/base-layout';
 
+export const layout = BaseLayout;
+
 export const config = {
-	dependencies: {
-		importMeta: import.meta,
-		components: [Card, BaseLayout],
-	},
+  dependencies: {
+    components: [Card, BaseLayout],
+  },
 };
 
-<BaseLayout class="prose">
+# Dashboard
 
-# MDX Page
-
-This is a test page.
-
-<Card title="Hello" copy="This is the card copy" />
-
-</BaseLayout>
+<Card title="Analytics" value="100%" />
+<Card title="Users" value="500" />
 ```
 </CodeBlock>
 
-## Key Features
+## Configuration
 
-1. **Markdown Syntax**: Write content using familiar Markdown syntax.
-2. **JSX Integration**: Seamlessly integrate JSX components within your Markdown.
-3. **Code Highlighting**: Automatic syntax highlighting for code blocks.
-4. **Frontmatter Support**: Define metadata using YAML frontmatter.
-
-## Best Practices
-
-1. **Component Imports**: Import and use custom components at the top of your MDX files.
-2. **Layouts**: Use layouts to maintain consistent page structures across your MDX content.
-3. **Metadata**: Utilize frontmatter for defining page-specific metadata.
-
-## Integration with Other Plugins
-
-The MDX integration works well with other Ecopages plugins. For example, you can use it alongside the Lit plugin:
+The `mdxPlugin` accepts standard MDX compile options.
 
 <CodeBlock>
 ```typescript
-import { ConfigBuilder } from '@ecopages/core';
-import { mdxPlugin } from '@ecopages/mdx';
-import { litPlugin } from '@ecopages/lit';
-
-const config = await new ConfigBuilder()
-.setRootDir(import.meta.dir)
-.setBaseUrl(import.meta.env.ECOPAGES_BASE_URL)
-.setIntegrations([mdxPlugin(), litPlugin()])
-.build();
-
-export default config;
+mdxPlugin({
+  compilerOptions: {
+    remarkPlugins: [],
+    rehypePlugins: [],
+    // You can also change the JSX runtime if needed (default: 'react')
+    jsxImportSource: 'react', 
+  }
+})
 ```
 </CodeBlock>
 
-**Note**: Currently, when using the Lit plugin with MDX, Lit components are not server-side rendered within MDX files. Instead, they are loaded and rendered on the client side.
+## Integration with Other Frameworks
 
-By leveraging the MDX integration, you can create rich, interactive content pages that combine the simplicity of Markdown with the power of components in your Ecopages project.
+While React is the default, MDX can be used with other frameworks like Lit, though it may require specific configuration or client-side rendering considerations.
+
+<div class="banner banner--alert mt-4" role="alert">
+	<p class="banner__title">Non-React Frameworks</p>
+	<p>
+		When using non-React frameworks inside MDX (e.g., Lit components), they might not be server-side rendered by the MDX renderer and will likely relying on client-side hydration.
+	</p>
+</div>
+
+For example, using Lit components:
+
+<CodeBlock>
+```typescript
+import { litPlugin } from '@ecopages/lit';
+
+// ... inside config
+.setIntegrations([mdxPlugin(), litPlugin()])
+```
+</CodeBlock>
+
+In your MDX file, standard Lit components will work as custom elements (once registered via their import).
